added ajax service to add account ...but 415 unsupported media type issue is there with ajax call

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,4 +6,4 @@ NotEmpty = {0} must have a value
 Size = {0} must be between {2} and {1}
 typeMismatch.java.util.Date={0} is an invalid date. Use format MM-DD-YYYY.
 
- 
+Size.card.validation = {0} must be greater than {1} and less than {2}
