added customer registration part

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,12 @@ user.userType=UserType
 user.userName=UserName
 user.password=Password
 
+firstName=First Name
+lastName=Last Name
+emailAdress=Email Address
+address=Address
+credential.username=Username
+credential.password=Password
 
 AbstractUserDetailsAuthenticationProvider.badCredentials=Username or Password is incorrect.
 product.type=Product Type
